# vmware-collector

./: .gitignore  .gitreview  Dockerfile.j2  README.md  counterInfo.txt  extend_start.sh  main.py  requirements.txt  setup.cfg  test-requirements.txt  todo.txt  tox.ini
docs/: add_metric.md  build_image.md  configuration.md  deploy_for_openstack_liberty.md  deployment.md
vmware_collector/: constants.py  data.txt  gnocchi.py  keystone.py  main.py  main_old.py  metrics.py  notifier.py  nova.py  objects.py  opts.py  utils.py  vmware.py  vmware2.py  vmware3.py
vmware_collector/common/: exceptions.py  localcache.py  opts.py  utils.py
vmware_collector/services/: gnocchi.py  neutron.py  nova.py  vmware.py
vmware_collector/sync/: base.py  service.py
vmware_collector/tests/: base.py  test.conf  test2.conf  test_exceptions.py  test_gnocchi.py  test_main2.py  test_nova.py  test_utils.py  test_vmware.py  test_vmware2.py
vmware_collector/tests/files/: counterInfo.formated  instance_disk  instance_network_interface  metering.sample.parsed.txt  metering.sample.txt  notification.sample.parsed.txt  notification.sample.txt
vmware_collector_role/: inventory  vmware_collector.yml
vmware_collector_role/defaults/: main.yml
vmware_collector_role/handlers/: main.yml
vmware_collector_role/tasks/: bootstrap.yml  config.yml  deploy.yml  pull.yml  upgrade.yml
vmware_collector_role/templates/: vmware_collector.conf.j2  vmware_collector.json.j2
