[metadata]
name = vmware_collector
summary = vmware_collector
description-file =
    README.md
author = 99cloud
author-email = jeffrey.zhang@99cloud.net
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    vmwhare_collector

[entry_points]
console_scripts =
    vmware-collector = vmware_collector.main:main
