[metadata]
name = vmware_collector
summary = vmware_collector
description-file =
    README.md
author = 99cloud
author-email = jeffrey.zhang@99cloud.net
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    vmware_collector

[entry_points]
console_scripts =
    vmware-collector = vmware_collector.main:main
    vmware-collector-upgrade = vmware_collector.services.gnocchi:upgrade


vmware_collector.metrics =
    cpu = vmware_collector.metrics:CPUMetric
    ram = vmware_collector.metrics:RAMMetric
    network_tx = vmware_collector.metrics:NetworkTXMetric
    network_rx = vmware_collector.metrics:NetworkRXMetric
    disk_read = vmware_collector.metrics:DiskReadMetric
    disk_write = vmware_collector.metrics:DiskWriteMetric
    disk_read_iops = vmware_collector.metrics:DiskReadIopsMetric
    disk_write_iops = vmware_collector.metrics:DiskWriteIopsMetric
